# python-project

./: cookiecutter.json
hooks/: post_gen_project.sh  pre_gen_project.sh
{{cookiecutter.name}}/: .gitignore  pyproject.toml
{{cookiecutter.name}}/tests/: test_{{cookiecutter.name}}.py
